Tue May 31 00:59:01 BST 2011  Colin Watson  <cjwatson@debian.org>

	* src/man.c (locale_macros): Add a backslash to the end of the .if
	  line, to avoid adding a blank line to the output (Debian bug
	  #628639).

Fri May 20 16:35:02 BST 2011  Yasuaki Taniguchi  <yasuakit@gmail.com>

	* po/ja.po: Update from Translation Project.

Wed May 18 17:25:46 BST 2011  Yasuaki Taniguchi  <yasuakit@gmail.com>

	* po/ja.po: Update from Translation Project.
	* man/THANKS: Update.

Fri May 13 16:11:07 BST 2011  Martin Eberhard Schauer  <Martin.E.Schauer@gmx.de>

	* po/de.po: Update from Translation Project.

Sat Apr 23 18:54:06 BST 2011  Colin Watson  <cjwatson@debian.org>

	* src/Makefile.am (SUBDIRS): Build this directory before tests/, so
	  that 'make check' works even if 'make' has not been run.

Sat Apr 23 18:00:34 BST 2011  Colin Watson  <cjwatson@debian.org>

	Upgrade to Autoconf 2.68 and Gnulib 20110412-stable.

Wed Apr 13 11:22:39 BST 2011  Colin Watson  <cjwatson@debian.org>

	* Version: 2.6.0.2.
	* man/po4a/po/man-db-manpages.pot, po/man-db.pot, po/*.po: Update.

Wed Apr 13 10:26:07 BST 2011  Colin Watson  <cjwatson@debian.org>

	* src/descriptions.c (parse_descriptions): Once we've seen at least
	  one record, ignore any further records that don't include a whatis
	  description, as they tend to be noise (Arch Linux bug #22866).
	* NEWS: Document this.

Tue Apr 12 14:10:17 BST 2011  Jordi Mallach  <jordi@gnu.org>

	* po/ca.po: Update from Translation Project.

Tue Apr 12 14:03:38 BST 2011  Colin Watson  <cjwatson@debian.org>

	* src/check_mandirs.c (test_manfile): whatis->whatis may be NULL in
	  the case of an empty page.  Guard against this (Debian bug
	  #622104).
	* src/tests/mandb-5: New file.
	* src/tests/Makefile.am (ALL_TESTS): Add mandb-5.
	* NEWS: Document this.

Sun Apr 10 22:09:10 BST 2011  Colin Watson  <cjwatson@debian.org>

	* Version: 2.6.0.1.
	* man/po4a/po/man-db-manpages.pot, po/man-db.pot, po/*.po: Update.
